--- a/index.html
+++ b/index.html
@@ -2,80 +2,80 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#191919">
-    <meta name="color-scheme" content="dark">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#191919">
+  <meta name="color-scheme" content="dark">
 
-    <!-- Favicon with animated SVG -->
-    <link rel="icon" type="image/svg+xml" href="/dev.webp">
-    <link rel="apple-touch-icon" href="/dev.webp">
-    <link rel="shortcut icon" href="/dev.webp" type="image/webp">
+  <!-- Favicon with animated SVG -->
+  <link rel="icon" type="image/svg+xml" href="/dev.webp">
+  <link rel="apple-touch-icon" href="/dev.webp">
+  <link rel="shortcut icon" href="/dev.webp" type="image/webp">
 
-    <!-- Image for Google Search Indexing -->
-    <link rel="image_src" href="https://devchauhan.in/dev.png">
-    <link rel="preload" as="image" href="/dev.png">
+  <!-- Image for Google Search Indexing -->
+  <link rel="image_src" href="https://devchauhan.in/dev.png">
+  <link rel="preload" as="image" href="/dev.png">
 
-    <title>Dev Chauhan | Full Stack Developer & System Architect</title>
+  <title>Dev Chauhan | Full Stack Developer & System Architect</title>
 
-    <!-- Primary Meta Tags -->
-    <meta name="description"
-        content="Dev Chauhan is a Full Stack Developer and System Architect specialized in building AI-powered applications, high-performance web systems, and scalable architectures. Expert in React, TypeScript, Next.js, and modern web technologies.">
-    <meta name="keywords"
-        content="Dev Chauhan, Full Stack Developer, System Architect, React Developer, TypeScript, Next.js, AI Applications, Web Development, India Developer, Portfolio">
-    <meta name="author" content="Dev Chauhan">
-    <meta name="robots" content="index, follow">
-    <meta name="language" content="English">
-    <link rel="canonical" href="https://devchauhan.in/" />
+  <!-- Primary Meta Tags -->
+  <meta name="description"
+    content="Dev Chauhan is a Full Stack Developer and System Architect specialized in building AI-powered applications, high-performance web systems, and scalable architectures. Expert in React, TypeScript, Next.js, and modern web technologies.">
+  <meta name="keywords"
+    content="Dev Chauhan, Full Stack Developer, System Architect, React Developer, TypeScript, Next.js, AI Applications, Web Development, India Developer, Portfolio">
+  <meta name="author" content="Dev Chauhan">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="English">
+  <link rel="canonical" href="https://devchauhan.in/" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://devchauhan.in/">
-    <meta property="og:title" content="Dev Chauhan | Full Stack Developer & System Architect">
-    <meta property="og:description"
-        content="Explore the portfolio of Dev Chauhan - building AI-powered applications and high-performance web systems. Check out projects like Colora, Brainsync, and more.">
-    <meta property="og:image" content="https://devchauhan.in/dev.png">
-    <meta property="og:image:secure_url" content="https://devchauhan.in/dev.png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:site_name" content="Dev Chauhan Portfolio">
-    <meta property="og:locale" content="en_IN">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://devchauhan.in/">
+  <meta property="og:title" content="Dev Chauhan | Full Stack Developer & System Architect">
+  <meta property="og:description"
+    content="Explore the portfolio of Dev Chauhan - building AI-powered applications and high-performance web systems. Check out projects like Colora, Brainsync, and more.">
+  <meta property="og:image" content="https://devchauhan.in/dev.png">
+  <meta property="og:image:secure_url" content="https://devchauhan.in/dev.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:site_name" content="Dev Chauhan Portfolio">
+  <meta property="og:locale" content="en_IN">
 
-    <!-- Twitter / X -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://devchauhan.in/">
-    <meta name="twitter:title" content="Dev Chauhan | Full Stack Developer & System Architect">
-    <meta name="twitter:description"
-        content="Explore the portfolio of Dev Chauhan - building AI-powered applications and high-performance web systems. Check out projects like Colora, Brainsync, and more.">
-    <meta name="twitter:image" content="https://devchauhan.in/dev.png">
-    <meta name="twitter:creator" content="@devchauhann">
+  <!-- Twitter / X -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://devchauhan.in/">
+  <meta name="twitter:title" content="Dev Chauhan | Full Stack Developer & System Architect">
+  <meta name="twitter:description"
+    content="Explore the portfolio of Dev Chauhan - building AI-powered applications and high-performance web systems. Check out projects like Colora, Brainsync, and more.">
+  <meta name="twitter:image" content="https://devchauhan.in/dev.png">
+  <meta name="twitter:creator" content="@devchauhann">
 
-    <!-- Image SEO Tags for Google Indexing -->
-    <meta property="image" content="https://devchauhan.in/dev.png">
-    <meta name="image" content="https://devchauhan.in/dev.png">
-    <meta itemprop="image" content="https://devchauhan.in/dev.png">
+  <!-- Image SEO Tags for Google Indexing -->
+  <meta property="image" content="https://devchauhan.in/dev.png">
+  <meta name="image" content="https://devchauhan.in/dev.png">
+  <meta itemprop="image" content="https://devchauhan.in/dev.png">
 
-    <!-- Additional SEO Meta Tags -->
-    <meta name="revisit-after" content="7 days">
-    <meta name="rating" content="general">
+  <!-- Additional SEO Meta Tags -->
+  <meta name="revisit-after" content="7 days">
+  <meta name="rating" content="general">
 
-    <!-- Preconnect for Performance -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Preconnect for Performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <!-- Google Fonts -->
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-        rel="stylesheet">
+  <!-- Google Fonts -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+    rel="stylesheet">
 
-    <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
 
 
 
-    <!-- Structured Data (JSON-LD) - Person Schema -->
-    <script type="application/ld+json">
+  <!-- Structured Data (JSON-LD) - Person Schema -->
+  <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "Person",
@@ -105,8 +105,8 @@
     }
     </script>
 
-    <!-- Structured Data (JSON-LD) - Homepage Breadcrumb -->
-    <script type="application/ld+json">
+  <!-- Structured Data (JSON-LD) - Homepage Breadcrumb -->
+  <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "BreadcrumbList",
@@ -139,8 +139,8 @@
     }
     </script>
 
-    <!-- Structured Data (JSON-LD) - Organization Schema -->
-    <script type="application/ld+json">
+  <!-- Structured Data (JSON-LD) - Organization Schema -->
+  <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "Organization",
@@ -161,57 +161,83 @@
     }
     </script>
 
-    <!-- Sitemap & RSS -->
-    <link rel="sitemap" href="https://devchauhan.in/sitemap.xml" type="application/xml">
-    <link rel="alternate" type="application/json" href="https://devchauhan.in/structured-data.json">
+  <!-- Sitemap & RSS -->
+  <link rel="sitemap" href="https://devchauhan.in/sitemap.xml" type="application/xml">
+  <link rel="alternate" type="application/json" href="https://devchauhan.in/structured-data.json">
 
-    <!-- Performance & SEO Optimizations -->
-    <link rel="dns-prefetch" href="//fonts.googleapis.com">
-    <link rel="dns-prefetch" href="//fonts.gstatic.com">
-    <link rel="dns-prefetch" href="//cdn.tailwindcss.com">
+  <!-- Image Sitemap for Google Image Search -->
+  <link rel="sitemap" href="https://devchauhan.in/image-sitemap.xml" type="application/xml">
 
-    <style>
-        body {
-            background-color: rgb(25, 25, 25) !important;
-            color: #ffffff;
-            font-family: 'Inter', sans-serif !important;
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-            margin: 0;
-            padding: 0;
-        }
+  <!-- Structured Data (JSON-LD) - Image Schema for Profile Picture -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ImageObject",
+      "name": "Dev Chauhan Profile Picture",
+      "url": "https://devchauhan.in/dev.png",
+      "width": 1200,
+      "height": 630,
+      "author": {
+        "@type": "Person",
+        "name": "Dev Chauhan"
+      },
+      "description": "Full Stack Developer & System Architect from New Delhi, India",
+      "thumbnailUrl": "https://devchauhan.in/dev.png",
+      "isPartOf": {
+        "@type": "WebSite",
+        "name": "Dev Chauhan Portfolio",
+        "url": "https://devchauhan.in"
+      }
+    }
+    </script>
 
-        ::selection {
-            background-color: rgba(255, 255, 255, 0.2);
-        }
+  <!-- Performance & SEO Optimizations -->
+  <link rel="dns-prefetch" href="//fonts.googleapis.com">
+  <link rel="dns-prefetch" href="//fonts.gstatic.com">
+  <link rel="dns-prefetch" href="//cdn.tailwindcss.com">
 
-        .no-scrollbar::-webkit-scrollbar {
-            display: none;
-        }
+  <style>
+    body {
+      background-color: rgb(25, 25, 25) !important;
+      color: #ffffff;
+      font-family: 'Inter', sans-serif !important;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      margin: 0;
+      padding: 0;
+    }
 
-        .no-scrollbar {
-            -ms-overflow-style: none;
-            scrollbar-width: none;
-        }
+    ::selection {
+      background-color: rgba(255, 255, 255, 0.2);
+    }
 
-        ::-webkit-scrollbar {
-            width: 6px;
-        }
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
 
-        ::-webkit-scrollbar-track {
-            background: rgb(25, 25, 25);
-        }
+    .no-scrollbar {
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+    }
 
-        ::-webkit-scrollbar-thumb {
-            background: #333;
-            border-radius: 10px;
-        }
+    ::-webkit-scrollbar {
+      width: 6px;
+    }
 
-        ::-webkit-scrollbar-thumb:hover {
-            background: #444;
-        }
-    </style>
-    <script type="importmap">
+    ::-webkit-scrollbar-track {
+      background: rgb(25, 25, 25);
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background: #333;
+      border-radius: 10px;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+      background: #444;
+    }
+  </style>
+  <script type="importmap">
 {
   "imports": {
     "react/": "https://esm.sh/react@^19.2.3/",
@@ -222,12 +248,12 @@
   }
 }
 </script>
-    <link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="/index.css">
 </head>
 
 <body>
-    <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+  <div id="root"></div>
+  <script type="module" src="/index.tsx"></script>
 </body>
 
 </html>
