--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <link rel="image_src" href="https://devchauhan.in/dev.png">
   <link rel="preload" as="image" href="/dev.png">
 
-  <!-- Preload All Project Images for Faster Navigation -->
-  <link rel="preload" as="image" href="/colora.png">
-  <link rel="preload" as="image" href="/brainsync.png">
-  <link rel="preload" as="image" href="/toole.png">
-  <link rel="preload" as="image" href="/githubprofile.png">
-  <link rel="preload" as="image" href="/nearchat.png">
-  <link rel="preload" as="image" href="/iconworld.png">
-  <link rel="preload" as="image" href="/macos.png">
+  <!-- Prefetch Project Images for Faster Navigation (no console warning) -->
+  <link rel="prefetch" as="image" href="/colora.png">
+  <link rel="prefetch" as="image" href="/brainsync.png">
+  <link rel="prefetch" as="image" href="/toole.png">
+  <link rel="prefetch" as="image" href="/githubprofile.png">
+  <link rel="prefetch" as="image" href="/nearchat.png">
+  <link rel="prefetch" as="image" href="/iconworld.png">
+  <link rel="prefetch" as="image" href="/macos.png">
 
   <title>Dev Chauhan | Full Stack Developer & System Architect</title>
 
